✨ feat : add some info related to dataset to crop recommendation model notebook

--- a/notebooks/end-to-end-crop-recommendation-model.ipynb
+++ b/notebooks/end-to-end-crop-recommendation-model.ipynb
@@ -48,6 +48,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Data\n",
+    "\n",
+    "What we want to do here is dive into the data our problem definition is based on. This may involve, sourcing, defining different parameters, talking to experts about it and finding out what you should expect.\n",
+    "\n",
+    "We've downloaded this data in a formatted way from [Kaggle](https://www.kaggle.com/datasets/atharvaingle/crop-recommendation-dataset).\n",
+    "\n",
+    "This dataset contains only 7 attributes. **Attributes** (also called **features**) are the variables what we'll use to predict our **target variable**.\n",
+    "\n",
+    "Attributes and features are also referred to as **independent variables** and a target variable can be referred to as a **dependent variable**.\n",
+    "\n",
+    "> We use the independent variables to predict our dependent variable.\n",
+    "\n",
+    "Or in our case, the independent variables are a different attributes related to a farm and the dependent variable what type of crop is suitable for a given farm.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
