✨ feat : import required sklearn and other tools for crop recommendation model

--- a/notebooks/end-to-end-crop-recommendation-model.ipynb
+++ b/notebooks/end-to-end-crop-recommendation-model.ipynb
@@ -118,6 +118,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preparing the tools\n",
+    "\n",
+    "At the start of any project, it's custom to see the required libraries imported in a big chunk.\n",
+    "\n",
+    "The libraries we use will differ from project to project. But there are a few which we can take advantage of during almost every structured data project. \n",
+    "\n",
+    "* [pandas](https://pandas.pydata.org/) for data analysis.\n",
+    "* [NumPy](https://numpy.org/) for numerical operations.\n",
+    "* [Matplotlib](https://matplotlib.org/)/[seaborn](https://seaborn.pydata.org/) for plotting or data visualization.\n",
+    "* [Scikit-Learn](https://scikit-learn.org/stable/) for machine learning modelling and evaluation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Regular EDA and plotting libraries\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns \n",
+    "\n",
+    "# We want our plots to appear in the notebook\n",
+    "%matplotlib inline \n",
+    "\n",
+    "## Models\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "## Model evaluators\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.model_selection import RandomizedSearchCV, GridSearchCV\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "from sklearn.metrics import plot_roc_curve"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
