✨ feat : complete flask rest api to expose crop recommendation endpoint successfully

--- a/notebooks/map-label-codes-to-crop-names.ipynb
+++ b/notebooks/map-label-codes-to-crop-names.ipynb
@@ -257,7 +257,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -439,12 +441,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_crops.to_csv('../data/processed/crop_name_code_mapping.csv',index=False);"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
